deps/v8/test/message/let-asi-yield-nongenerator.out
*%(basename)s:8: SyntaxError: Unexpected number
  yield 0;
        ^
SyntaxError: Unexpected number
